--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,6 +1,6 @@
 <form [formGroup]="registerForm" (ngSubmit)="agregarUsuario()" class="custom-form">
     <h1>Regístrate</h1>
-  
+
     <!-- Nombre y Apellido -->
     <div class="form-group">
       <div class="form-field">
@@ -10,13 +10,13 @@
         </div>
       </div>
       <div class="form-field">
-        <input id="lastname" formControlName="lastname" placeholder="Apellido" />
-        <div *ngIf="registerForm.get('lastname')?.touched && registerForm.get('lastname')?.invalid">
-          <small *ngIf="registerForm.get('lastname')?.errors?.['required']">El apellido es obligatorio.</small>
+        <input id="apellido" formControlName="apellido" placeholder="Apellido" />
+        <div *ngIf="registerForm.get('apellido')?.touched && registerForm.get('apellido')?.invalid">
+          <small *ngIf="registerForm.get('apellido')?.errors?.['required']">El apellido es obligatorio.</small>
         </div>
       </div>
     </div>
-  
+
     <!-- Email -->
     <div>
       <input id="email" formControlName="email" placeholder="Email" />
@@ -25,23 +25,23 @@
         <small *ngIf="registerForm.get('email')?.errors?.['email']">Introduce una dirección de correo electrónico válida.</small>
       </div>
     </div>
-  
+
     <!-- Password y Confirm Password -->
     <div class="form-group">
       <div class="form-field">
-        <input id="password" type="password" formControlName="password" placeholder="Password" />
-        <div *ngIf="registerForm.get('password')?.touched && registerForm.get('password')?.invalid">
-          <small *ngIf="registerForm.get('password')?.errors?.['required']">La contraseña es obligatoria.</small>
+        <input id="contrasenia" type="password" formControlName="contrasenia" placeholder="Contraseña" />
+        <div *ngIf="registerForm.get('contrasenia')?.touched && registerForm.get('contrasenia')?.invalid">
+          <small *ngIf="registerForm.get('contrasenia')?.errors?.['required']">La contraseña es obligatoria.</small>
         </div>
       </div>
       <div class="form-field">
-        <input id="confirmPassword" type="password" formControlName="confirmPassword" placeholder="Confirm Password" />
-        <div *ngIf="registerForm.get('confirmPassword')?.touched && registerForm.get('confirmPassword')?.invalid">
-          <small *ngIf="registerForm.get('confirmPassword')?.errors?.['required']">Confirma tu contraseña.</small>
+        <input id="confirmarContrasenia" type="password" formControlName="confirmarContrasenia" placeholder="Confirma tu contraseña" />
+        <div *ngIf="registerForm.get('confirmarContrasenia')?.touched && registerForm.get('confirmarContrasenia')?.invalid">
+          <small *ngIf="registerForm.get('confirmarContrasenia')?.errors?.['required']">Confirma tu contraseña.</small>
         </div>
       </div>
     </div>
-  
+
     <!-- DNI y Teléfono -->
     <div class="form-group">
       <div class="form-field">
@@ -57,7 +57,7 @@
         </div>
       </div>
     </div>
-  
+
     <!-- Nombre de Usuario -->
     <div>
       <input id="nombreUsuario" formControlName="nombreUsuario" placeholder="Nombre de Usuario" />
@@ -65,7 +65,7 @@
         <small *ngIf="registerForm.get('nombreUsuario')?.errors?.['required']">El nombre de usuario es obligatorio.</small>
       </div>
     </div>
-  
+
     <!-- Fecha de Nacimiento -->
     <div>
       <input id="fechaNacimiento" type="date" formControlName="fechaNacimiento" placeholder="Fecha de Nacimiento" />
@@ -73,52 +73,63 @@
         <small *ngIf="registerForm.get('fechaNacimiento')?.errors?.['required']">La fecha de nacimiento es obligatoria.</small>
       </div>
     </div>
-  
-    <!-- Provincia y Ciudad -->
+
+    <!-- Provincia y Municipio -->
     <div class="form-group">
       <div class="form-field">
-        <input id="provincia" formControlName="provincia" placeholder="Provincia" />
+        <label for="provincia">Provincia:</label>
+        <select id="provincia" formControlName="provincia" (change)="actualizarMunicipios($any($event.target).value)">
+          <option *ngFor="let provincia of provincias" [value]="provincia">{{provincia}}</option>
+        </select>
         <div *ngIf="registerForm.get('provincia')?.touched && registerForm.get('provincia')?.invalid">
           <small *ngIf="registerForm.get('provincia')?.errors?.['required']">La provincia es obligatoria.</small>
         </div>
       </div>
       <div class="form-field">
-        <input id="ciudad" formControlName="ciudad" placeholder="Ciudad" />
-        <div *ngIf="registerForm.get('ciudad')?.touched && registerForm.get('ciudad')?.invalid">
-          <small *ngIf="registerForm.get('ciudad')?.errors?.['required']">La ciudad es obligatoria.</small>
-        </div>
+        <label for="municipio">Municipio:</label>
+        <select id="municipio" formControlName="municipio">
+          <option *ngFor="let municipio of municipios" [value]="municipio">{{municipio}}</option>
+        </select> <div *ngIf="registerForm.get('municipio')?.touched && registerForm.get('municipio')?.invalid">
+        <small *ngIf="registerForm.get('municipio')?.errors?.['required']">El municipio es obligatorio.</small>
       </div>
     </div>
-  
-    <!-- Calle y Número -->
+    </div>
+
+    <!--<div class="form-group">
+      <div class="form-field">
+        <label for="provincia">Provincia:</label>
+        <select id="provincia" formControlName="provincia" placeholder="Provincia"></select>
+        <div *ngIf="registerForm.get('provincia')?.touched && registerForm.get('provincia')?.invalid">
+          <small *ngIf="registerForm.get('provincia')?.errors?.['required']">La provincia es obligatoria.</small>
+        </div>
+      </div>
+      <div class="form-field">
+        <input id="municipio" formControlName="municipio" placeholder="Municipio" />
+        <div *ngIf="registerForm.get('municipio')?.touched && registerForm.get('municipio')?.invalid">
+          <small *ngIf="registerForm.get('municipio')?.errors?.['required']">El municipio es obligatorio.</small>
+        </div>
+      </div>
+    </div>-->
+
+    <!-- Dirección -->
     <div class="form-group">
       <div class="form-field">
-        <input id="calle" formControlName="calle" placeholder="Calle" />
-        <div *ngIf="registerForm.get('calle')?.touched && registerForm.get('calle')?.invalid">
-          <small *ngIf="registerForm.get('calle')?.errors?.['required']">La calle es obligatoria.</small>
-        </div>
-      </div>
-      <div class="form-field">
-        <input id="numero" type="number" formControlName="numero" placeholder="Número" />
-        <div *ngIf="registerForm.get('numero')?.touched && registerForm.get('numero')?.invalid">
-          <small *ngIf="registerForm.get('numero')?.errors?.['required']">El número es obligatorio.</small>
+        <input id="direccion" formControlName="direccion" placeholder="Direccion" />
+        <div *ngIf="registerForm.get('direccion')?.touched && registerForm.get('direccion')?.invalid">
+          <small *ngIf="registerForm.get('direccion')?.errors?.['required']">La dirección es obligatoria.</small>
         </div>
       </div>
     </div>
-  
-    <!-- Piso y Departamento -->
-    <div class="form-group">
-      <div class="form-field">
-        <input id="piso" type="number" formControlName="piso" placeholder="Piso" />
-      </div>
-      <div class="form-field">
-        <input id="departamento" formControlName="departamento" placeholder="Departamento" />
-      </div>
-    </div>
-    
+
     <!-- Código Postal -->
-    <div>
-      <input id="codigoPostal" formControlName="codigoPostal" placeholder="Código Postal" />
+    <div class="form-group">
+      <div class="form-field">
+        <input id="codigoPostal" formControlName="codigoPostal" placeholder="Codigo postal" />
+          <div *ngIf="registerForm.get('codigoPostal')?.touched && registerForm.get('codigoPostal')?.invalid">
+            <small *ngIf="registerForm.get('codigoPostal')?.errors?.['required']">El código postal es obligatorio.</small>
+          </div>
+      </div>
     </div>
+
     <button type="submit" [disabled]="registerForm.invalid">Register</button>
   </form>
