error titulo casacomponent

--- a/src/app/casa-catalogo/casa-catalogo.component.html
+++ b/src/app/casa-catalogo/casa-catalogo.component.html
@@ -1,1 +1,7 @@
-<p>casa-catalogo works!</p>
+<h2>{{ propiedad.titulo }}</h2>
+
+<!--<div *ngIf="imagenActual != -1"><img [src]="propiedad.imagenes[imagenActual]"></div>-->
+
+<div class="venta">
+    
+</div>
