--- a/src/app/catalogo/catalogo.component.html
+++ b/src/app/catalogo/catalogo.component.html
@@ -10,6 +10,7 @@
           <li><strong>Dormitorios:</strong> {{ propiedad.caracteristicas.cantidadDormitorios }}</li>
           <li><strong>Baños:</strong> {{ propiedad.caracteristicas.cantidadBanios }}</li>
           <li><strong>Metros Totales:</strong> {{ propiedad.caracteristicas.m2Totales }} m²</li>
+          <li> {{ propiedad.id }} </li>
         </ul>
         <button [routerLink]="['/casaCatalogo', propiedad.id]" class="btn btn-primary">
           Más Información
@@ -17,3 +18,5 @@
       </div>
     </div>
   </div>
+
+
