Creé y modifiqué componentes

--- a/src/app/catalogo/catalogo.component.html
+++ b/src/app/catalogo/catalogo.component.html
@@ -12,7 +12,7 @@
           <li><strong>Metros Totales:</strong> {{ propiedad.caracteristicas.m2Totales }} m²</li>
           <li> {{ propiedad.id }} </li>
         </ul>
-        <button [routerLink]="['/casaCatalogo', propiedad.id]" class="btn btn-primary">
+        <button [routerLink]="['/propiedad', propiedad.id]" class="btn btn-primary">
           Más Información
         </button>
       </div>
