agreué css navbar y actualicé los models

--- a/src/app/mapa/mapa.component.html
+++ b/src/app/mapa/mapa.component.html
@@ -1,5 +1,1 @@
-<div>
-  <input type="text" #addressInput placeholder="Ingresa una dirección" />
-  <button (click)="searchAddress(addressInput.value)">Buscar</button>
-</div>
-<div id="map" style="height: 500px;"></div>
+<div id="map"></div>
