--- a/src/app/mi-cuenta/mi-cuenta.component.html
+++ b/src/app/mi-cuenta/mi-cuenta.component.html
@@ -2,5 +2,7 @@
   <div id="misDatos">
   </div>
   <div id="propiedades">
+    <div *ngFor="let propiedad of propiedades">
+    </div>
   </div>
 </div>
