--- a/src/app/modificar-propiedad/modificar-propiedad.component.html
+++ b/src/app/modificar-propiedad/modificar-propiedad.component.html
@@ -1,1 +1,191 @@
-<p>modificar-propiedad works!</p>
+<div class="form-container">
+    <h2>Formulario de Propiedad</h2>
+  
+    <form [formGroup]="propiedadForm" (ngSubmit)="onSubmit()">
+      
+      <!-- Tipo de Propiedad -->
+      <div class="form-group">
+        <label for="tipoPropiedad">Tipo de Propiedad</label>
+        <select id="tipoPropiedad" class="form-control" formControlName="tipoPropiedad">
+          <option *ngFor="let tipo of tiposPropiedad" [value]="tipo">{{ tipo }}</option>
+        </select>
+      </div>
+  
+      <!-- Título -->
+      <div class="form-group">
+        <label for="titulo">Título</label>
+        <input type="text" id="titulo" class="form-control" formControlName="titulo">
+      </div>
+  
+      <!-- Descripción -->
+      <div class="form-group">
+        <label for="descripcion">Descripción</label>
+        <textarea id="descripcion" class="form-control" formControlName="descripcion"></textarea>
+      </div>
+  
+      <!-- Precio -->
+      <div class="form-group">
+        <label for="precio">Precio</label>
+        <input type="number" id="precio" class="form-control" formControlName="precio">
+      </div>
+  
+      <!-- Alquiler -->
+      <div class="form-group">
+        <label for="alquiler">Alquiler</label>
+        <input type="checkbox" id="alquiler" formControlName="alquiler">
+      </div>
+  
+      <!-- Expensas -->
+      <div class="form-group">
+        <label for="expensas">Expensas</label>
+        <input type="number" id="expensas" name="expensas" class="form-control" formControlName="expensas">
+      </div>
+  
+      <!-- Imagenes -->
+      <div class="form-group">
+        <label for="imagenes">Imágenes</label>
+        <input type="file" id="imagenes" class="form-control" (change)="onImageSelected($event)" multiple>
+      </div>
+  
+      <div *ngIf="propiedad.imagenes.length > 0" class="form-group">
+        <h4>Imágenes que ya estan:</h4>
+        <ul class="list-group">
+          <li *ngFor="let image of propiedad.imagenes; let i = index" class="list-group-item">
+            <img [src]="getImagen(i)" alt="imagen de la propiedad" alt="">
+            <button type="button" class="btn btn-danger btn-sm" (click)="eliminarImage(i)">Eliminar</button>
+          </li>
+        </ul>
+      </div>
+  
+      <!-- Características -->
+      <div formGroupName="caracteristicas">
+        <div class="form-group">
+          <label for="cantidadAmbientes">Cantidad de Ambientes</label>
+          <input type="number" id="cantidadAmbientes" class="form-control" formControlName="cantidadAmbientes">
+        </div>
+  
+        <div class="form-group">
+          <label for="m2Totales">Metros Totales</label>
+          <input type="number" id="m2Totales" class="form-control" formControlName="m2Totales">
+        </div>
+  
+        <div class="form-group">
+          <label for="m2Cubiertos">Metros Cubiertos</label>
+          <input type="number" id="m2Cubiertos" class="form-control" formControlName="m2Cubiertos">
+        </div>
+  
+        <div class="form-group">
+          <label for="cantidadBanios">Cantidad de Baños</label>
+          <input type="number" id="cantidadBanios" class="form-control" formControlName="cantidadBanios">
+        </div>
+  
+        <div class="form-group">
+          <label for="cantidadDormitorios">Cantidad de Dormitorios</label>
+          <input type="number" id="cantidadDormitorios" class="form-control" formControlName="cantidadDormitorios">
+        </div>
+  
+        <div class="form-group">
+          <label for="cantidadToilettes">Cantidad de Toilettes</label>
+          <input type="number" id="cantidadToilettes" class="form-control" formControlName="cantidadToilettes">
+        </div>
+  
+        <div class="form-group">
+          <label for="anioConstruccionRemodelacion">Año de Construcción/Remodelación</label>
+          <input type="number" id="anioConstruccionRemodelacion" class="form-control" formControlName="anioConstruccionRemodelacion">
+        </div>
+  
+        <div class="form-group">
+          <label for="cantidadPlantas">Cantidad de Plantas</label>
+          <input type="number" id="cantidadPlantas" class="form-control" formControlName="cantidadPlantas">
+        </div>
+  
+        <div class="form-group">
+          <label for="cantidadGarages">Cantidad de Garages</label>
+          <input type="number" id="cantidadGarages" class="form-control" formControlName="cantidadGarages">
+        </div>
+  
+        <div class="form-group">
+          <label for="cantidadElevadores">Cantidad de Elevadores</label>
+          <input type="number" id="cantidadElevadores" class="form-control" formControlName="cantidadElevadores">
+        </div>
+  
+        <div class="form-group">
+          <label for="parrilla">Parrilla</label>
+          <input type="checkbox" id="parrilla" formControlName="parrilla">
+        </div>
+  
+        <div class="form-group">
+          <label for="pileta">Pileta</label>
+          <input type="checkbox" id="pileta" formControlName="pileta">
+        </div>
+  
+        <div class="form-group">
+          <label for="balcon">Balcón</label>
+          <input type="checkbox" id="balcon" formControlName="balcon">
+        </div>
+  
+        <div class="form-group">
+          <label for="patio">Patio</label>
+          <input type="checkbox" id="patio" formControlName="patio">
+        </div>
+  
+        <div class="form-group">
+          <label for="gimnasio">Gimnasio</label>
+          <input type="checkbox" id="gimnasio" formControlName="gimnasio">
+        </div>
+  
+        <div class="form-group">
+          <label for="seguridad">Seguridad</label>
+          <input type="checkbox" id="seguridad" formControlName="seguridad">
+        </div>
+  
+        <!--<div class="form-group">
+          <label for="mascotas">Mascotas Permitidas</label>
+          <input name="mascotas"type="checkbox" id="mascotas"class="form-control"formControlName="mascotas">
+        </div>-->
+      </div>
+  <!-- Dirección -->
+        <!-- Provincia y Municipio -->
+    <div class="form-group"formGroupName="ubicacion">
+        <div class="form-field">
+          <label for="provincia">Provincia:</label>
+          <select id="provincia" formControlName="provincia" (change)="actualizarMunicipios($any($event.target).value)">
+            <option *ngFor="let provincia of provincias" [value]="provincia">{{provincia}}</option>
+          </select>
+        </div> 
+        <div class="form-field">
+          <label for="municipio">Municipio:</label>
+          <select id="municipio" formControlName="municipio">
+            <option *ngFor="let municipio of municipios" [value]="municipio">{{municipio}}</option>
+          </select>
+          
+        </div>
+      </div>
+  
+      <!-- Dirección -->
+      <div class="form-group"formGroupName="ubicacion">
+        <div class="form-field">
+          <input id="direccion" formControlName="direccion" placeholder="Direccion" />
+          <div *ngIf="propiedadForm.get('direccion')?.touched && propiedadForm.get('direccion')?.invalid">
+            <small *ngIf="propiedadForm.get('direccion')?.errors?.['required']">La dirección es obligatoria.</small>
+          </div>
+        </div>
+        <div class="form-field">
+          <input id="piso_departamento" formControlName="piso_departamento" placeholder="Piso / Departamento" />
+        </div>
+      </div>
+  
+      <!-- Código Postal -->
+      <div class="form-group"formGroupName="ubicacion">
+        <div class="form-field">
+          <input id="codigoPostal" formControlName="codigoPostal" placeholder="Codigo postal" />
+            <div *ngIf="propiedadForm.get('codigoPostal')?.touched && propiedadForm.get('codigoPostal')?.invalid">
+              <small *ngIf="propiedadForm.get('codigoPostal')?.errors?.['required']">El código postal es obligatorio.</small>
+            </div>
+        </div>
+      </div>
+      <!-- Botón de envío -->
+      <button type="submit" class="btn btn-primary" [disabled]="propiedadForm.invalid">Enviar</button>
+    </form>
+  </div>
+  
