funciona abm propiedad

--- a/src/app/mi-cuenta/mi-cuenta.component.html
+++ b/src/app/mi-cuenta/mi-cuenta.component.html
@@ -28,6 +28,7 @@
 
       <button [routerLink]="['/modificarPropiedad', propiedad.id]" class="btn btn-primary">Editar Propiedad</button>
      <button  class="btn btn-primary" [routerLink]="['/mi-cuenta']"(click)="borrarPropiedad(propiedad.id)">Borrar Propiedad</button>
+      <button [routerLink]="['/propiedad', propiedad.id]" class="btn btn-primary">Más Información</button>
     </div>
   </div>
 
