--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -12,6 +12,7 @@
     </ng-container>
     <ng-container *ngIf="logged">
       <li><button class="navbar-button" (click)="argegarCasa()">Agregar Propiedad</button></li>
+      <li><button class="navbar-button" (click)="preguntas()">Preguntas</button></li>
       <li><button class="navbar-button" (click)="chats()">Chats</button></li>
       <li><button class="navbar-button" (click)="miCuenta()">Mi Cuenta</button></li>
       <li><button class="navbar-button" (click)="logout()">Cerrar sesión</button></li>
