--- a/src/app/propiedad/propiedad.component.html
+++ b/src/app/propiedad/propiedad.component.html
@@ -11,71 +11,71 @@
     </div>
 </div>
 
-  <!-- Mensaje si no hay imágenes -->
-  <div *ngIf="propiedad.imagenes == null || propiedad.imagenes.length == 0">
-    <p>No hay imágenes disponibles para esta propiedad.</p>
-  </div>
+<!-- Mensaje si no hay imágenes -->
+<div *ngIf="propiedad.imagenes == null || propiedad.imagenes.length == 0">
+  <p>No hay imágenes disponibles para esta propiedad.</p>
+</div>
 
 <button (click)="contactar()">Contactar</button>
 
 <div class="propiedad-info">
-    <!-- Estado de la propiedad (alquiler o venta) -->
-    <h1 *ngIf="propiedad.alquiler" class="estado">En alquiler</h1>
-    <h1 *ngIf="!propiedad.alquiler" class="estado">En venta</h1>
+  <!-- Estado de la propiedad (alquiler o venta) -->
+  <h1 *ngIf="propiedad.alquiler" class="estado">En alquiler</h1>
+  <h1 *ngIf="!propiedad.alquiler" class="estado">En venta</h1>
 
-    <!-- Precio -->
-    <p class="precio">{{ propiedad.precio | currency }}</p>
+  <!-- Precio -->
+  <p class="precio">{{ propiedad.precio | currency }}</p>
 
-    <!-- Tipo de propiedad y expensas -->
-    <p class="tipo-propiedad">Tipo de propiedad: {{ propiedad.tipoPropiedad }}</p>
-    <p class="expensas">Expensas: {{ propiedad.expensas | currency }}</p>
+  <!-- Tipo de propiedad y expensas -->
+  <p class="tipo-propiedad">Tipo de propiedad: {{ propiedad.tipoPropiedad }}</p>
+  <p class="expensas">Expensas: {{ propiedad.expensas | currency }}</p>
 
-    <!-- Descripción -->
-    <p class="descripcion">{{ propiedad.descripcion }}</p>
+  <!-- Descripción -->
+  <p class="descripcion">{{ propiedad.descripcion }}</p>
 
 
-    <!-- m² Cubiertos -->
-    <p class="m2-cubiertos">m² Cubiertos: {{ propiedad.caracteristicas.m2Cubiertos }}</p>
+  <!-- m² Cubiertos -->
+  <p class="m2-cubiertos">m² Cubiertos: {{ propiedad.caracteristicas.m2Cubiertos }}</p>
 
-    <!-- m² Terreno -->
-    <p class="m2-terreno">m² Terreno: {{ propiedad.caracteristicas.m2Totales }}</p>
+  <!-- m² Terreno -->
+  <p class="m2-terreno">m² Terreno: {{ propiedad.caracteristicas.m2Totales }}</p>
 
-    <!-- Ambientes -->
-    <p class="ambientes">Ambientes: {{ propiedad.caracteristicas.cantidadAmbientes }}</p>
+  <!-- Ambientes -->
+  <p class="ambientes">Ambientes: {{ propiedad.caracteristicas.cantidadAmbientes }}</p>
 
-    <!-- Baños -->
-    <p class="banios">Baños: {{ propiedad.caracteristicas.cantidadBanios }}</p>
+  <!-- Baños -->
+  <p class="banios">Baños: {{ propiedad.caracteristicas.cantidadBanios }}</p>
 
-    <!-- Dormitorios -->
-    <p class="dormitorios">Dormitorios: {{ propiedad.caracteristicas.cantidadDormitorios }}</p>
+  <!-- Dormitorios -->
+  <p class="dormitorios">Dormitorios: {{ propiedad.caracteristicas.cantidadDormitorios }}</p>
 
-    <!-- Año de construcción o remodelación -->
-    <p class="anio">Año de construcción/remodelación: {{ propiedad.caracteristicas.anioConstruccionRemodelacion }}</p>
+  <!-- Año de construcción o remodelación -->
+  <p class="anio">Año de construcción/remodelación: {{ propiedad.caracteristicas.anioConstruccionRemodelacion }}</p>
 
-    <!-- Otros datos -->
-    <p class="otros">Cantidad de plantas: {{ propiedad.caracteristicas.cantidadPlantas }}</p>
-    <p class="otros">Cantidad de garages: {{ propiedad.caracteristicas.cantidadGarages }}</p>
-    <p class="otros">Cantidad de elevadores: {{ propiedad.caracteristicas.cantidadElevadores }}</p>
+  <!-- Otros datos -->
+  <p class="otros">Cantidad de plantas: {{ propiedad.caracteristicas.cantidadPlantas }}</p>
+  <p class="otros">Cantidad de garages: {{ propiedad.caracteristicas.cantidadGarages }}</p>
+  <p class="otros">Cantidad de elevadores: {{ propiedad.caracteristicas.cantidadElevadores }}</p>
 
-    <!-- Características adicionales -->
-    <div class="caracteristicas">
-      <p *ngIf="propiedad.caracteristicas.parrilla">Parrilla: Sí</p>
-      <p *ngIf="propiedad.caracteristicas.pileta">Pileta: Sí</p>
-      <p *ngIf="propiedad.caracteristicas.balcon">Balcón: Sí</p>
-      <p *ngIf="propiedad.caracteristicas.patio">Patio: Sí</p>
-      <p *ngIf="propiedad.caracteristicas.gimnasio">Gimnasio: Sí</p>
-      <p *ngIf="propiedad.caracteristicas.seguridad">Seguridad: Sí</p>
-    </div>
+  <!-- Características adicionales -->
+  <div class="caracteristicas">
+    <p *ngIf="propiedad.caracteristicas.parrilla">Parrilla: Sí</p>
+    <p *ngIf="propiedad.caracteristicas.pileta">Pileta: Sí</p>
+    <p *ngIf="propiedad.caracteristicas.balcon">Balcón: Sí</p>
+    <p *ngIf="propiedad.caracteristicas.patio">Patio: Sí</p>
+    <p *ngIf="propiedad.caracteristicas.gimnasio">Gimnasio: Sí</p>
+    <p *ngIf="propiedad.caracteristicas.seguridad">Seguridad: Sí</p>
   </div>
+</div>
 
 
-  <div class="ubicacion-info">
-    <h2>Ubicación</h2>
-    <p class="direccion">{{ propiedad.ubicacion.direccion }}</p>
-    <p class="piso-departamento" *ngIf="propiedad.ubicacion.piso_departamento">Piso/Departamento: {{ propiedad.ubicacion.piso_departamento }}</p>
-    <p class="municipio">{{ propiedad.ubicacion.municipio }}, {{ propiedad.ubicacion.provincia }}</p>
-    <p class="codigo-postal">Código Postal: {{ propiedad.ubicacion.codigoPostal }}</p>
-    <app-mapa [direccion]="dirCompleta(propiedad.ubicacion)"></app-mapa>
-  </div>
+<div class="ubicacion-info">
+  <h2>Ubicación</h2>
+  <p class="direccion">{{ propiedad.ubicacion.direccion }}</p>
+  <p class="piso-departamento" *ngIf="propiedad.ubicacion.piso_departamento">Piso/Departamento: {{ propiedad.ubicacion.piso_departamento }}</p>
+  <p class="municipio">{{ propiedad.ubicacion.municipio }}, {{ propiedad.ubicacion.provincia }}</p>
+  <p class="codigo-postal">Código Postal: {{ propiedad.ubicacion.codigoPostal }}</p>
+  <app-mapa [direccion]="dirCompleta(propiedad.ubicacion)"></app-mapa>
+</div>
 
-
+<app-preguntas [preguntas]="propiedad.preguntas" [idPropiedad]="idpropiedad"></app-preguntas>
