--- a/src/app/catalogo/catalogo.component.html
+++ b/src/app/catalogo/catalogo.component.html
@@ -1,8 +1,9 @@
 <div id="barra_busqueda">
-  <input id="input_buscra" [(ngModel)]="busqueda" type="text" placeholder="Buscar">
-  <button id="btn_buscar" (click)="buscar()">Buscar</button>
-  <button id="filtros_boton" (click)="btnFiltros()">Filtros</button>
+  <input id="input_buscra" [(ngModel)]="busqueda" type="text" placeholder="Buscar" class="input-busqueda">
+  <button id="btn_buscar" (click)="buscar()" class="btn-buscar">Buscar</button>
+  <button id="filtros_boton" (click)="btnFiltros()" class="btn-filtros">Filtros</button>
 </div>
+
 <div id="filtros" *ngIf="mostrarFiltros">
   <form [formGroup]="filtrosForm" (ngSubmit)="onSubmit()">
     <div class="form-group">
@@ -96,12 +97,13 @@
     </div>
   </form>
 </div>
-<div class="catalogo" *ngFor="let propiedad of propiedades">
-  <div class="catalog-card">
+
+<div class="catalogo">
+  <div *ngFor="let propiedad of propiedades" class="catalog-card">
     <img [src]="getImagen(propiedad)" alt="Imagen propiedad">
     <div class="info">
       <h2>{{ propiedad.titulo }}</h2>
-      <p>{{ propiedad.ubicacion || 'No especificada' }}</p>
+     
       <p><strong>Precio:</strong> ${{ propiedad.precio }}</p>
       <ul>
         <li><strong>Ambientes:</strong> {{ propiedad.caracteristicas.cantidadAmbientes }}</li>
@@ -115,6 +117,7 @@
     </div>
   </div>
 </div>
+
 <div *ngIf="cant > imagenesMostradasPorPagina">
   <button id="ant" (click)="paginaAnterior()">Página anterior</button>
   <button id="next" (click)="siguientePagina()">Página siguiente</button>
